# todoist_automations

./: .deepsource.toml  .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  main.py  pylama.ini  pyproject.toml  test_main.py
.github/workflows/: codeql-analysis.yml  image.yaml  tests.yml
config/: base.py  constants.py
middleware/: security.py
models/: telegram.py  todoist.py
routes/: telegram.py  todoist.py  tools.py
services/airtable/: records.py
services/gh/: repos.py
services/telegram/: auth.py  messages.py
services/todoist/: auth.py  automations_items.py  initial_sync.py  items.py  users.py
services/toolslib/: tools.py
tasks/: automations_items.py  telegram.py  telegram_crud.py  telergam_crud.py  todoist_auth.py  todoist_crud.py  todoist_initial_sync.py  todoist_user.py
tests/routes/: test_web_tools.py
tests/services/: test_gh.py  test_tools.py
utils/: mongo.py  security.py  start_up.py  telegram.py
