[tool.poetry]
name = "todoist_automations"
version = "0.3.1"
description = ""
authors = ["Dimitris <dimitris.strantsalis@workable.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
pymongo = "^4.1.1"
todoist-api-python = "^1.1.1"
todoist-python = "^8.1.3"
pendulum = "^2.1.2"
python-telegram-bot = "^13.12"
sentry-sdk = "^1.8.0"
PyGithub = "^1.55"
pyairtable = "^1.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
ipython = "^8.10.0"
pytest = "^7.1.2"
pylama = "^8.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
